# thriftlike

./: Cargo.toml
src/: lib.rs  main.rs
