[package]
name = "thriftlike"
version = "0.1.0"
authors = ["Martin Durant <martin.durant@utoronto.ca>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bytes = "1.0.1"
byteorder = "1.4.2"

[profile.release]
codegen-units = 1
lto = "fat"
 # panic = "abort"


[lib]
name = "thriftlike"
crate-type = ["cdylib", "rlib"]


[dependencies.pyo3]
version = "0.13.1"
features = ["extension-module"]
